--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,32 +1,31 @@
 alabaster==0.7.16 ; python_version >= "3.9" and python_version < "3.14"
-anyio==4.8.0 ; python_version >= "3.9" and python_version < "3.14"
+anyio==4.9.0 ; python_version >= "3.9" and python_version < "3.14"
 appnope==0.1.4 ; python_version >= "3.9" and python_version < "3.14" and platform_system == "Darwin"
 argon2-cffi-bindings==21.2.0 ; python_version >= "3.9" and python_version < "3.14"
 argon2-cffi==23.1.0 ; python_version >= "3.9" and python_version < "3.14"
 arrow==1.3.0 ; python_version >= "3.9" and python_version < "3.14"
-asn1crypto==1.5.1 ; python_version >= "3.9" and python_version < "3.14"
 asttokens==3.0.0 ; python_version >= "3.9" and python_version < "3.14"
-attrs==24.3.0 ; python_version >= "3.9" and python_version < "3.14"
-babel==2.16.0 ; python_version >= "3.9" and python_version < "3.14"
+attrs==25.3.0 ; python_version >= "3.9" and python_version < "3.14"
+babel==2.17.0 ; python_version >= "3.9" and python_version < "3.14"
 base58==2.1.1 ; python_version >= "3.9" and python_version < "3.14"
-beautifulsoup4==4.12.3 ; python_version >= "3.9" and python_version < "3.14"
-black==24.10.0 ; python_version >= "3.9" and python_version < "3.14"
+beautifulsoup4==4.13.3 ; python_version >= "3.9" and python_version < "3.14"
+black==25.1.0 ; python_version >= "3.9" and python_version < "3.14"
 bleach[css]==6.2.0 ; python_version >= "3.9" and python_version < "3.14"
 cached-property==2.0.1 ; python_version >= "3.9" and python_version < "3.14"
-cattrs==24.1.2 ; python_version >= "3.9" and python_version < "3.14"
-certifi==2024.12.14 ; python_version >= "3.9" and python_version < "3.14"
+cattrs==24.1.3 ; python_version >= "3.9" and python_version < "3.14"
+certifi==2025.1.31 ; python_version >= "3.9" and python_version < "3.14"
 cffi==1.17.1 ; python_version >= "3.9" and python_version < "3.14"
 chardet==5.2.0 ; python_version >= "3.9" and python_version < "3.14"
 charset-normalizer==3.4.1 ; python_version >= "3.9" and python_version < "3.14"
 click==8.1.8 ; python_version >= "3.9" and python_version < "3.14"
-coincurve==20.0.0 ; python_version >= "3.9" and python_version < "3.14"
+coincurve==21.0.0 ; python_version >= "3.9" and python_version < "3.14"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.14" and (platform_system == "Windows" or sys_platform == "win32")
 comm==0.2.2 ; python_version >= "3.9" and python_version < "3.14"
-coverage[toml]==7.6.10 ; python_version >= "3.9" and python_version < "3.14"
+coverage[toml]==7.8.0 ; python_version >= "3.9" and python_version < "3.14"
 cryptography==43.0.3 ; python_version >= "3.9" and python_version < "3.14"
 cytoolz==1.0.1 ; python_version >= "3.9" and python_version < "3.14" and implementation_name == "cpython"
-debugpy==1.8.12 ; python_version >= "3.9" and python_version < "3.14"
-decorator==5.1.1 ; python_version >= "3.9" and python_version < "3.14"
+debugpy==1.8.14 ; python_version >= "3.9" and python_version < "3.14"
+decorator==5.2.1 ; python_version >= "3.9" and python_version < "3.14"
 defusedxml==0.7.1 ; python_version >= "3.9" and python_version < "3.14"
 deprecation==2.1.0 ; python_version >= "3.9" and python_version < "3.14"
 diff-cover==9.2.0 ; python_version >= "3.9" and python_version < "3.14"
@@ -34,44 +33,44 @@ docker==7.1.0 ; python_version >= "3.9" and python_version < "3.14"
 docutils==0.21.2 ; python_version >= "3.9" and python_version < "3.14"
 entrypoints==0.4 ; python_version >= "3.9" and python_version < "3.14"
 eth-hash==0.7.1 ; python_version >= "3.9" and python_version < "3.14"
-eth-typing==5.1.0 ; python_version >= "3.9" and python_version < "3.14"
-eth-utils==5.1.0 ; python_version >= "3.9" and python_version < "3.14"
+eth-typing==5.2.0 ; python_version >= "3.9" and python_version < "3.14"
+eth-utils==5.2.0 ; python_version >= "3.9" and python_version < "3.14"
 exceptiongroup==1.2.2 ; python_version >= "3.9" and python_version < "3.11"
 execnet==2.1.1 ; python_version >= "3.9" and python_version < "3.14"
-executing==2.1.0 ; python_version >= "3.9" and python_version < "3.14"
-fastecdsa==3.0.0 ; python_version >= "3.9" and python_version < "3.14"
+executing==2.2.0 ; python_version >= "3.9" and python_version < "3.14"
+fastecdsa==3.0.1 ; python_version >= "3.9" and python_version < "3.14"
 fastjsonschema==2.21.1 ; python_version >= "3.9" and python_version < "3.14"
 fqdn==1.5.1 ; python_version >= "3.9" and python_version < "3.14"
 idna==3.10 ; python_version >= "3.9" and python_version < "3.14"
 imagesize==1.4.1 ; python_version >= "3.9" and python_version < "3.14"
-importlib-metadata==8.5.0 ; python_version >= "3.9" and python_version < "3.10"
-iniconfig==2.0.0 ; python_version >= "3.9" and python_version < "3.14"
+importlib-metadata==8.6.1 ; python_version >= "3.9" and python_version < "3.10"
+iniconfig==2.1.0 ; python_version >= "3.9" and python_version < "3.14"
 ipykernel==6.29.5 ; python_version >= "3.9" and python_version < "3.14"
 ipython-genutils==0.2.0 ; python_version >= "3.9" and python_version < "3.14"
 ipython==8.18.1 ; python_version >= "3.9" and python_version < "3.14"
 isoduration==20.11.0 ; python_version >= "3.9" and python_version < "3.14"
-isort==5.13.2 ; python_version >= "3.9" and python_version < "3.14"
+isort==6.0.1 ; python_version >= "3.9" and python_version < "3.14"
 jedi==0.19.2 ; python_version >= "3.9" and python_version < "3.14"
-jinja2==3.1.5 ; python_version >= "3.9" and python_version < "3.14"
+jinja2==3.1.6 ; python_version >= "3.9" and python_version < "3.14"
 jsonpointer==3.0.0 ; python_version >= "3.9" and python_version < "3.14"
 jsonschema-specifications==2024.10.1 ; python_version >= "3.9" and python_version < "3.14"
 jsonschema==4.23.0 ; python_version >= "3.9" and python_version < "3.14"
 jsonschema[format-nongpl]==4.23.0 ; python_version >= "3.9" and python_version < "3.14"
 jupyter-client==7.4.9 ; python_version >= "3.9" and python_version < "3.14"
 jupyter-core==5.7.2 ; python_version >= "3.9" and python_version < "3.14"
-jupyter-events==0.11.0 ; python_version >= "3.9" and python_version < "3.14"
+jupyter-events==0.12.0 ; python_version >= "3.9" and python_version < "3.14"
 jupyter-server-terminals==0.5.3 ; python_version >= "3.9" and python_version < "3.14"
 jupyter-server==2.15.0 ; python_version >= "3.9" and python_version < "3.14"
 jupyterlab-pygments==0.3.0 ; python_version >= "3.9" and python_version < "3.14"
 markupsafe==3.0.2 ; python_version >= "3.9" and python_version < "3.14"
 matplotlib-inline==0.1.7 ; python_version >= "3.9" and python_version < "3.14"
-mistune==3.1.0 ; python_version >= "3.9" and python_version < "3.14"
+mistune==3.1.3 ; python_version >= "3.9" and python_version < "3.14"
 mnemonic==0.21 ; python_version >= "3.9" and python_version < "3.14"
 mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "3.14"
-mypy==1.14.1 ; python_version >= "3.9" and python_version < "3.14"
+mypy==1.15.0 ; python_version >= "3.9" and python_version < "3.14"
 nbclassic==1.2.0 ; python_version >= "3.9" and python_version < "3.14"
 nbclient==0.10.2 ; python_version >= "3.9" and python_version < "3.14"
-nbconvert==7.16.5 ; python_version >= "3.9" and python_version < "3.14"
+nbconvert==7.16.6 ; python_version >= "3.9" and python_version < "3.14"
 nbformat==5.10.4 ; python_version >= "3.9" and python_version < "3.14"
 nest-asyncio==1.6.0 ; python_version >= "3.9" and python_version < "3.14"
 netstruct==1.1.2 ; python_version >= "3.9" and python_version < "3.14"
@@ -84,37 +83,38 @@ parameterized==0.9.0 ; python_version >= "3.9" and python_version < "3.14"
 parso==0.8.4 ; python_version >= "3.9" and python_version < "3.14"
 pathspec==0.12.1 ; python_version >= "3.9" and python_version < "3.14"
 pexpect==4.9.0 ; python_version >= "3.9" and python_version < "3.14" and sys_platform != "win32"
-platformdirs==4.3.6 ; python_version >= "3.9" and python_version < "3.14"
+platformdirs==4.3.7 ; python_version >= "3.9" and python_version < "3.14"
 pluggy==1.5.0 ; python_version >= "3.9" and python_version < "3.14"
 ply==3.11 ; python_version >= "3.9" and python_version < "3.14"
 prometheus-client==0.21.1 ; python_version >= "3.9" and python_version < "3.14"
-prompt-toolkit==3.0.48 ; python_version >= "3.9" and python_version < "3.14"
-psutil==6.1.1 ; python_version >= "3.9" and python_version < "3.14"
+prompt-toolkit==3.0.50 ; python_version >= "3.9" and python_version < "3.14"
+psutil==7.0.0 ; python_version >= "3.9" and python_version < "3.14"
 ptyprocess==0.7.0 ; python_version >= "3.9" and python_version < "3.14" and (os_name != "nt" or sys_platform != "win32")
 pure-eval==0.2.3 ; python_version >= "3.9" and python_version < "3.14"
 py-ecc==7.0.1 ; python_version >= "3.9" and python_version < "3.14"
 pycparser==2.22 ; python_version >= "3.9" and python_version < "3.14"
 pygments==2.19.1 ; python_version >= "3.9" and python_version < "3.14"
 pysodium==0.7.18 ; python_version >= "3.9" and python_version < "3.14"
-pytest-cov==6.0.0 ; python_version >= "3.9" and python_version < "3.14"
+pytest-cov==6.1.1 ; python_version >= "3.9" and python_version < "3.14"
 pytest-xdist==3.6.1 ; python_version >= "3.9" and python_version < "3.14"
-pytest==8.3.4 ; python_version >= "3.9" and python_version < "3.14"
+pytest==8.3.5 ; python_version >= "3.9" and python_version < "3.14"
 python-dateutil==2.9.0.post0 ; python_version >= "3.9" and python_version < "3.14"
-python-dotenv==1.0.1 ; python_version >= "3.9" and python_version < "3.14"
-python-json-logger==3.2.1 ; python_version >= "3.9" and python_version < "3.14"
-pywin32==308 ; python_version >= "3.9" and python_version < "3.14" and sys_platform == "win32"
-pywinpty==2.0.14 ; python_version >= "3.9" and python_version < "3.14" and os_name == "nt"
+python-dotenv==1.1.0 ; python_version >= "3.9" and python_version < "3.14"
+python-json-logger==3.3.0 ; python_version >= "3.9" and python_version < "3.14"
+pywin32==310 ; python_version >= "3.9" and python_version < "3.14" and sys_platform == "win32"
+pywinpty==2.0.15 ; python_version >= "3.9" and python_version < "3.14" and os_name == "nt"
 pyyaml==6.0.2 ; python_version >= "3.9" and python_version < "3.14"
-pyzmq==26.2.0 ; python_version >= "3.9" and python_version < "3.14"
-referencing==0.36.1 ; python_version >= "3.9" and python_version < "3.14"
+pyzmq==26.4.0 ; python_version >= "3.9" and python_version < "3.14"
+referencing==0.36.2 ; python_version >= "3.9" and python_version < "3.14"
 requests==2.32.3 ; python_version >= "3.9" and python_version < "3.14"
 rfc3339-validator==0.1.4 ; python_version >= "3.9" and python_version < "3.14"
 rfc3986-validator==0.1.1 ; python_version >= "3.9" and python_version < "3.14"
-rpds-py==0.22.3 ; python_version >= "3.9" and python_version < "3.14"
-ruff==0.9.2 ; python_version >= "3.9" and python_version < "3.14"
+rpds-py==0.24.0 ; python_version >= "3.9" and python_version < "3.14"
+ruff==0.11.5 ; python_version >= "3.9" and python_version < "3.14"
 send2trash==1.8.3 ; python_version >= "3.9" and python_version < "3.14"
+setuptools==78.1.0 ; python_version >= "3.9" and python_version < "3.14"
 simple-bson==0.0.3 ; python_version >= "3.9" and python_version < "3.14"
-simplejson==3.19.3 ; python_version >= "3.9" and python_version < "3.14"
+simplejson==3.20.1 ; python_version >= "3.9" and python_version < "3.14"
 six==1.17.0 ; python_version >= "3.9" and python_version < "3.14"
 sniffio==1.3.1 ; python_version >= "3.9" and python_version < "3.14"
 snowballstemmer==2.2.0 ; python_version >= "3.9" and python_version < "3.14"
@@ -135,7 +135,7 @@ stack-data==0.6.3 ; python_version >= "3.9" and python_version < "3.14"
 strict-rfc3339==0.7 ; python_version >= "3.9" and python_version < "3.14"
 tabulate==0.9.0 ; python_version >= "3.9" and python_version < "3.14"
 terminado==0.18.1 ; python_version >= "3.9" and python_version < "3.14"
-testcontainers==4.9.0 ; python_version >= "3.9" and python_version < "3.14"
+testcontainers==4.10.0 ; python_version >= "3.9" and python_version < "3.14"
 tinycss2==1.4.0 ; python_version >= "3.9" and python_version < "3.14"
 tomli==2.2.1 ; python_version >= "3.9" and python_full_version <= "3.11.0a6"
 toolz==1.0.0 ; python_version >= "3.9" and python_version < "3.14" and (implementation_name == "pypy" or implementation_name == "cpython")
@@ -143,14 +143,14 @@ tornado==6.4.2 ; python_version >= "3.9" and python_version < "3.14"
 tqdm==4.67.1 ; python_version >= "3.9" and python_version < "3.14"
 traitlets==5.14.3 ; python_version >= "3.9" and python_version < "3.14"
 types-python-dateutil==2.9.0.20241206 ; python_version >= "3.9" and python_version < "3.14"
-types-pyyaml==6.0.12.20241230 ; python_version >= "3.9" and python_version < "3.14"
-types-requests==2.32.0.20241016 ; python_version >= "3.9" and python_version < "3.14"
-types-setuptools==75.8.0.20250110 ; python_version >= "3.9" and python_version < "3.14"
-types-simplejson==3.19.0.20241221 ; python_version >= "3.9" and python_version < "3.14"
+types-pyyaml==6.0.12.20250402 ; python_version >= "3.9" and python_version < "3.14"
+types-requests==2.32.0.20250328 ; python_version >= "3.9" and python_version < "3.14"
+types-setuptools==78.1.0.20250329 ; python_version >= "3.9" and python_version < "3.14"
+types-simplejson==3.20.0.20250326 ; python_version >= "3.9" and python_version < "3.14"
 types-tabulate==0.9.0.20241207 ; python_version >= "3.9" and python_version < "3.14"
-typing-extensions==4.12.2 ; python_version >= "3.9" and python_version < "3.14"
+typing-extensions==4.13.2 ; python_version >= "3.9" and python_version < "3.14"
 uri-template==1.3.0 ; python_version >= "3.9" and python_version < "3.14"
-urllib3==2.3.0 ; python_version >= "3.9" and python_version < "3.14"
+urllib3==2.4.0 ; python_version >= "3.9" and python_version < "3.14"
 wcwidth==0.2.13 ; python_version >= "3.9" and python_version < "3.14"
 webcolors==24.11.1 ; python_version >= "3.9" and python_version < "3.14"
 webencodings==0.5.1 ; python_version >= "3.9" and python_version < "3.14"
