--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,9 +54,9 @@ fastecdsa = ">=2.2.3"
 jsonschema = ">=4.3.2"
 mnemonic = ">=0.21"
 netstruct = ">=1.1.2"
-notebook = ">=6.5,<7"
+notebook = ">=6.5,<7"  # pinned
 ply = ">=3.11"
-py-ecc = ">=7.0.0"
+py-ecc = "7.0.1"  # pinned
 pysodium = ">=0.7.10"
 python-dateutil = ">=2.8.2"
 requests = ">=2.28.2"
@@ -72,9 +72,13 @@ black = "*"
 diff-cover = "*"
 isort = "*"
 mypy = "*"
+parameterized = "*"
+poetry-plugin-export = "^1.9.0"
+PyYAML = "*"
 pytest = "*"
 pytest-cov = "*"
 pytest-xdist = "*"
+ruff = "*"
 Sphinx = "*"
 sphinx-click = "*"
 sphinxcontrib-googleanalytics = "*"
@@ -86,9 +90,6 @@ types-requests = "*"
 types-setuptools = "*"
 types-simplejson = "*"
 types-tabulate = "*"
-parameterized = "*"
-PyYAML = "*"
-ruff = "*"
 
 [tool.poetry.scripts]
 pytezos = 'pytezos.cli.cli:cli'
