--- a/requirements.slim.txt
+++ b/requirements.slim.txt
@@ -1,10 +1,11 @@
+annotated-types==0.7.0 ; python_version >= "3.9" and python_version < "3.14"
 attrs==25.3.0 ; python_version >= "3.9" and python_version < "3.14"
 base58==2.1.1 ; python_version >= "3.9" and python_version < "3.14"
 cached-property==2.0.1 ; python_version >= "3.9" and python_version < "3.14"
-cattrs==24.1.3 ; python_version >= "3.9" and python_version < "3.14"
-certifi==2025.1.31 ; python_version >= "3.9" and python_version < "3.14"
+cattrs==25.1.1 ; python_version >= "3.9" and python_version < "3.14"
+certifi==2025.8.3 ; python_version >= "3.9" and python_version < "3.14"
 cffi==1.17.1 ; python_version >= "3.9" and python_version < "3.14" and platform_python_implementation != "PyPy"
-charset-normalizer==3.4.1 ; python_version >= "3.9" and python_version < "3.14"
+charset-normalizer==3.4.2 ; python_version >= "3.9" and python_version < "3.14"
 click==8.1.8 ; python_version >= "3.9" and python_version < "3.14"
 coincurve==21.0.0 ; python_version >= "3.9" and python_version < "3.14"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.14" and platform_system == "Windows"
@@ -13,34 +14,37 @@ cytoolz==1.0.1 ; python_version >= "3.9" and python_version < "3.14" and impleme
 deprecation==2.1.0 ; python_version >= "3.9" and python_version < "3.14"
 docker==7.1.0 ; python_version >= "3.9" and python_version < "3.14"
 eth-hash==0.7.1 ; python_version >= "3.9" and python_version < "3.14"
-eth-typing==5.2.0 ; python_version >= "3.9" and python_version < "3.14"
-eth-utils==5.2.0 ; python_version >= "3.9" and python_version < "3.14"
-exceptiongroup==1.2.2 ; python_version >= "3.9" and python_version < "3.11"
+eth-typing==5.2.1 ; python_version >= "3.9" and python_version < "3.14"
+eth-utils==5.3.0 ; python_version >= "3.9" and python_version < "3.14"
+exceptiongroup==1.3.0 ; python_version >= "3.9" and python_version < "3.11"
 fastecdsa==3.0.1 ; python_version >= "3.9" and python_version < "3.14"
 idna==3.10 ; python_version >= "3.9" and python_version < "3.14"
-jsonschema-specifications==2024.10.1 ; python_version >= "3.9" and python_version < "3.14"
-jsonschema==4.23.0 ; python_version >= "3.9" and python_version < "3.14"
+jsonschema-specifications==2025.4.1 ; python_version >= "3.9" and python_version < "3.14"
+jsonschema==4.25.0 ; python_version >= "3.9" and python_version < "3.14"
 mnemonic==0.21 ; python_version >= "3.9" and python_version < "3.14"
 netstruct==1.1.2 ; python_version >= "3.9" and python_version < "3.14"
-packaging==24.2 ; python_version >= "3.9" and python_version < "3.14"
+packaging==25.0 ; python_version >= "3.9" and python_version < "3.14"
 ply==3.11 ; python_version >= "3.9" and python_version < "3.14"
 py-ecc==7.0.1 ; python_version >= "3.9" and python_version < "3.14"
 pycparser==2.22 ; python_version >= "3.9" and python_version < "3.14" and platform_python_implementation != "PyPy"
+pydantic-core==2.33.2 ; python_version >= "3.9" and python_version < "3.14"
+pydantic==2.11.7 ; python_version >= "3.9" and python_version < "3.14"
 pysodium==0.7.18 ; python_version >= "3.9" and python_version < "3.14"
 python-dateutil==2.9.0.post0 ; python_version >= "3.9" and python_version < "3.14"
-python-dotenv==1.1.0 ; python_version >= "3.9" and python_version < "3.14"
-pywin32==310 ; python_version >= "3.9" and python_version < "3.14" and sys_platform == "win32"
+python-dotenv==1.1.1 ; python_version >= "3.9" and python_version < "3.14"
+pywin32==311 ; python_version >= "3.9" and python_version < "3.14" and sys_platform == "win32"
 referencing==0.36.2 ; python_version >= "3.9" and python_version < "3.14"
-requests==2.32.3 ; python_version >= "3.9" and python_version < "3.14"
-rpds-py==0.24.0 ; python_version >= "3.9" and python_version < "3.14"
+requests==2.32.4 ; python_version >= "3.9" and python_version < "3.14"
+rpds-py==0.26.0 ; python_version >= "3.9" and python_version < "3.14"
 simple-bson==0.0.3 ; python_version >= "3.9" and python_version < "3.14"
 simplejson==3.20.1 ; python_version >= "3.9" and python_version < "3.14"
 six==1.17.0 ; python_version >= "3.9" and python_version < "3.14"
 strict-rfc3339==0.7 ; python_version >= "3.9" and python_version < "3.14"
 tabulate==0.9.0 ; python_version >= "3.9" and python_version < "3.14"
-testcontainers==4.10.0 ; python_version >= "3.9" and python_version < "3.14"
+testcontainers==4.12.0 ; python_version >= "3.9" and python_version < "3.14"
 toolz==1.0.0 ; python_version >= "3.9" and python_version < "3.14" and (implementation_name == "pypy" or implementation_name == "cpython")
 tqdm==4.67.1 ; python_version >= "3.9" and python_version < "3.14"
-typing-extensions==4.13.2 ; python_version >= "3.9" and python_version < "3.14"
-urllib3==2.4.0 ; python_version >= "3.9" and python_version < "3.14"
+typing-extensions==4.14.1 ; python_version >= "3.9" and python_version < "3.14"
+typing-inspection==0.4.1 ; python_version >= "3.9" and python_version < "3.14"
+urllib3==2.5.0 ; python_version >= "3.9" and python_version < "3.14"
 wrapt==1.17.2 ; python_version >= "3.9" and python_version < "3.14"
