--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,7 @@ authors = [
     "Roman Serikov",
 ]
 maintainers = [
-    "Lev Gorodetskii <pytezos@drsr.io>",
-    "Igor Sereda <sereda.igor.s@gmail.com>",
+    "Baking Bad team <hello@baking-bad.org>",
 ]
 readme = "README.md"
 repository = "https://github.com/baking-bad/pytezos"
@@ -101,7 +100,7 @@ force_single_line = true
 
 [tool.black]
 line-length = 120
-target-version = ['py39', 'py310', 'py311', 'py312']
+target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
 skip-string-normalization = true
 
 [tool.ruff]
