--- a/requirements.slim.txt
+++ b/requirements.slim.txt
@@ -1,124 +1,56 @@
 annotated-types==0.7.0 ; python_version >= "3.9" and python_version < "3.14"
-anyio==4.10.0 ; python_version >= "3.9" and python_version < "3.14"
-appnope==0.1.4 ; python_version >= "3.9" and python_version < "3.14" and platform_system == "Darwin"
-argon2-cffi-bindings==25.1.0 ; python_version >= "3.9" and python_version < "3.14"
-argon2-cffi==25.1.0 ; python_version >= "3.9" and python_version < "3.14"
-arrow==1.3.0 ; python_version >= "3.9" and python_version < "3.14"
-asttokens==3.0.0 ; python_version >= "3.9" and python_version < "3.14"
-attrs==25.3.0 ; python_version >= "3.9" and python_version < "3.14"
+attrs==25.4.0 ; python_version >= "3.9" and python_version < "3.14"
 base58==2.1.1 ; python_version >= "3.9" and python_version < "3.14"
-beautifulsoup4==4.13.4 ; python_version >= "3.9" and python_version < "3.14"
-bleach==6.2.0 ; python_version >= "3.9" and python_version < "3.14"
 cached-property==2.0.1 ; python_version >= "3.9" and python_version < "3.14"
-cattrs==25.1.1 ; python_version >= "3.9" and python_version < "3.14"
-certifi==2025.8.3 ; python_version >= "3.9" and python_version < "3.14"
-cffi==1.17.1 ; python_version >= "3.9" and python_version < "3.14"
-charset-normalizer==3.4.2 ; python_version >= "3.9" and python_version < "3.14"
-click==8.1.8 ; python_version >= "3.9" and python_version < "3.14"
+cattrs==25.3.0 ; python_version >= "3.9" and python_version < "3.14"
+certifi==2026.1.4 ; python_version >= "3.9" and python_version < "3.14"
+cffi==2.0.0 ; python_version >= "3.9" and python_version < "3.14" and platform_python_implementation != "PyPy"
+charset-normalizer==3.4.4 ; python_version >= "3.9" and python_version < "3.14"
+click==8.1.8 ; python_version == "3.9"
+click==8.3.1 ; python_version >= "3.10" and python_version < "3.14"
 coincurve==21.0.0 ; python_version >= "3.9" and python_version < "3.14"
-colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.14" and (platform_system == "Windows" or sys_platform == "win32")
-comm==0.2.3 ; python_version >= "3.9" and python_version < "3.14"
-cryptography==43.0.3 ; python_version >= "3.9" and python_version < "3.14"
-cytoolz==1.0.1 ; python_version >= "3.9" and python_version < "3.14" and implementation_name == "cpython"
-debugpy==1.8.15 ; python_version >= "3.9" and python_version < "3.14"
-decorator==5.2.1 ; python_version >= "3.9" and python_version < "3.14"
-defusedxml==0.7.1 ; python_version >= "3.9" and python_version < "3.14"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "3.14" and platform_system == "Windows"
+cryptography==43.0.3 ; python_version == "3.9"
+cryptography==46.0.3 ; python_version >= "3.10" and python_version < "3.14"
+cytoolz==1.1.0 ; python_version >= "3.9" and python_version < "3.14" and implementation_name == "cpython"
 deprecation==2.1.0 ; python_version >= "3.9" and python_version < "3.14"
 docker==7.1.0 ; python_version >= "3.9" and python_version < "3.14"
-entrypoints==0.4 ; python_version >= "3.9" and python_version < "3.14"
 eth-hash==0.7.1 ; python_version >= "3.9" and python_version < "3.14"
 eth-typing==5.2.1 ; python_version >= "3.9" and python_version < "3.14"
-eth-utils==5.3.0 ; python_version >= "3.9" and python_version < "3.14"
-exceptiongroup==1.3.0 ; python_version >= "3.9" and python_version < "3.11"
-executing==2.2.0 ; python_version >= "3.9" and python_version < "3.14"
+eth-utils==5.3.1 ; python_version >= "3.9" and python_version < "3.14"
+exceptiongroup==1.3.1 ; python_version >= "3.9" and python_version < "3.11"
 fastecdsa==3.0.1 ; python_version >= "3.9" and python_version < "3.14"
-fastjsonschema==2.21.1 ; python_version >= "3.9" and python_version < "3.14"
-fqdn==1.5.1 ; python_version >= "3.9" and python_version < "3.14"
-idna==3.10 ; python_version >= "3.9" and python_version < "3.14"
-importlib-metadata==8.6.1 ; python_version == "3.9"
-ipykernel==6.29.5 ; python_version >= "3.9" and python_version < "3.14"
-ipython-genutils==0.2.0 ; python_version >= "3.9" and python_version < "3.14"
-ipython==8.18.1 ; python_version >= "3.9" and python_version < "3.14"
-isoduration==20.11.0 ; python_version >= "3.9" and python_version < "3.14"
-jedi==0.19.2 ; python_version >= "3.9" and python_version < "3.14"
-jinja2==3.1.6 ; python_version >= "3.9" and python_version < "3.14"
-jsonpointer==3.0.0 ; python_version >= "3.9" and python_version < "3.14"
-jsonschema-specifications==2025.4.1 ; python_version >= "3.9" and python_version < "3.14"
-jsonschema==4.25.0 ; python_version >= "3.9" and python_version < "3.14"
-jupyter-client==7.4.9 ; python_version >= "3.9" and python_version < "3.14"
-jupyter-core==5.8.1 ; python_version >= "3.9" and python_version < "3.14"
-jupyter-events==0.12.0 ; python_version >= "3.9" and python_version < "3.14"
-jupyter-server-terminals==0.5.3 ; python_version >= "3.9" and python_version < "3.14"
-jupyter-server==2.16.0 ; python_version >= "3.9" and python_version < "3.14"
-jupyterlab-pygments==0.3.0 ; python_version >= "3.9" and python_version < "3.14"
-lark==1.2.2 ; python_version >= "3.9" and python_version < "3.14"
-markupsafe==3.0.2 ; python_version >= "3.9" and python_version < "3.14"
-matplotlib-inline==0.1.7 ; python_version >= "3.9" and python_version < "3.14"
-mistune==3.1.3 ; python_version >= "3.9" and python_version < "3.14"
+idna==3.11 ; python_version >= "3.9" and python_version < "3.14"
+jsonschema-specifications==2025.9.1 ; python_version >= "3.9" and python_version < "3.14"
+jsonschema==4.25.1 ; python_version == "3.9"
+jsonschema==4.26.0 ; python_version >= "3.10" and python_version < "3.14"
 mnemonic==0.21 ; python_version >= "3.9" and python_version < "3.14"
-nbclassic==1.3.1 ; python_version >= "3.9" and python_version < "3.14"
-nbclient==0.10.2 ; python_version >= "3.9" and python_version < "3.14"
-nbconvert==7.16.6 ; python_version >= "3.9" and python_version < "3.14"
-nbformat==5.10.4 ; python_version >= "3.9" and python_version < "3.14"
-nest-asyncio==1.6.0 ; python_version >= "3.9" and python_version < "3.14"
 netstruct==1.1.2 ; python_version >= "3.9" and python_version < "3.14"
-notebook-shim==0.2.4 ; python_version >= "3.9" and python_version < "3.14"
-notebook==6.5.7 ; python_version >= "3.9" and python_version < "3.14"
-overrides==7.7.0 ; python_version >= "3.9" and python_version < "3.14"
 packaging==25.0 ; python_version >= "3.9" and python_version < "3.14"
-pandocfilters==1.5.1 ; python_version >= "3.9" and python_version < "3.14"
-parso==0.8.4 ; python_version >= "3.9" and python_version < "3.14"
-pexpect==4.9.0 ; python_version >= "3.9" and python_version < "3.14" and sys_platform != "win32"
-platformdirs==4.3.8 ; python_version >= "3.9" and python_version < "3.14"
 ply==3.11 ; python_version >= "3.9" and python_version < "3.14"
-prometheus-client==0.22.1 ; python_version >= "3.9" and python_version < "3.14"
-prompt-toolkit==3.0.51 ; python_version >= "3.9" and python_version < "3.14"
-psutil==7.0.0 ; python_version >= "3.9" and python_version < "3.14"
-ptyprocess==0.7.0 ; python_version >= "3.9" and python_version < "3.14" and (sys_platform != "win32" or os_name != "nt")
-pure-eval==0.2.3 ; python_version >= "3.9" and python_version < "3.14"
 py-ecc==7.0.1 ; python_version >= "3.9" and python_version < "3.14"
-pycparser==2.22 ; python_version >= "3.9" and python_version < "3.14"
-pydantic-core==2.33.2 ; python_version >= "3.9" and python_version < "3.14"
-pydantic==2.11.7 ; python_version >= "3.9" and python_version < "3.14"
-pygments==2.19.2 ; python_version >= "3.9" and python_version < "3.14"
+pycparser==2.23 ; python_version >= "3.9" and python_version < "3.14" and platform_python_implementation != "PyPy" and implementation_name != "PyPy"
+pydantic-core==2.41.5 ; python_version >= "3.9" and python_version < "3.14"
+pydantic==2.12.5 ; python_version >= "3.9" and python_version < "3.14"
 pysodium==0.7.18 ; python_version >= "3.9" and python_version < "3.14"
 python-dateutil==2.9.0.post0 ; python_version >= "3.9" and python_version < "3.14"
-python-dotenv==1.1.1 ; python_version >= "3.9" and python_version < "3.14"
-python-json-logger==3.3.0 ; python_version >= "3.9" and python_version < "3.14"
+python-dotenv==1.2.1 ; python_version >= "3.9" and python_version < "3.14"
 pywin32==311 ; python_version >= "3.9" and python_version < "3.14" and sys_platform == "win32"
-pywinpty==2.0.15 ; python_version >= "3.9" and python_version < "3.14" and os_name == "nt"
-pyyaml==6.0.2 ; python_version >= "3.9" and python_version < "3.14"
-pyzmq==27.0.1 ; python_version >= "3.9" and python_version < "3.14"
-referencing==0.36.2 ; python_version >= "3.9" and python_version < "3.14"
-requests==2.32.4 ; python_version >= "3.9" and python_version < "3.14"
-rfc3339-validator==0.1.4 ; python_version >= "3.9" and python_version < "3.14"
-rfc3986-validator==0.1.1 ; python_version >= "3.9" and python_version < "3.14"
-rfc3987-syntax==1.1.0 ; python_version >= "3.9" and python_version < "3.14"
-rpds-py==0.26.0 ; python_version >= "3.9" and python_version < "3.14"
-send2trash==1.8.3 ; python_version >= "3.9" and python_version < "3.14"
+referencing==0.36.2 ; python_version == "3.9"
+referencing==0.37.0 ; python_version >= "3.10" and python_version < "3.14"
+requests==2.32.5 ; python_version >= "3.9" and python_version < "3.14"
+rpds-py==0.27.1 ; python_version == "3.9"
+rpds-py==0.30.0 ; python_version >= "3.10" and python_version < "3.14"
 simple-bson==0.0.3 ; python_version >= "3.9" and python_version < "3.14"
-simplejson==3.20.1 ; python_version >= "3.9" and python_version < "3.14"
+simplejson==3.20.2 ; python_version >= "3.9" and python_version < "3.14"
 six==1.17.0 ; python_version >= "3.9" and python_version < "3.14"
-sniffio==1.3.1 ; python_version >= "3.9" and python_version < "3.14"
-soupsieve==2.7 ; python_version >= "3.9" and python_version < "3.14"
-stack-data==0.6.3 ; python_version >= "3.9" and python_version < "3.14"
 strict-rfc3339==0.7 ; python_version >= "3.9" and python_version < "3.14"
 tabulate==0.9.0 ; python_version >= "3.9" and python_version < "3.14"
-terminado==0.18.1 ; python_version >= "3.9" and python_version < "3.14"
-testcontainers==4.12.0 ; python_version >= "3.9" and python_version < "3.14"
-tinycss2==1.4.0 ; python_version >= "3.9" and python_version < "3.14"
-toolz==1.0.0 ; python_version >= "3.9" and python_version < "3.14" and (implementation_name == "pypy" or implementation_name == "cpython")
-tornado==6.5.1 ; python_version >= "3.9" and python_version < "3.14"
+testcontainers==4.13.0 ; python_version == "3.9"
+testcontainers==4.14.0 ; python_version >= "3.10" and python_version < "3.14"
+toolz==1.1.0 ; python_version >= "3.9" and python_version < "3.14" and (implementation_name == "pypy" or implementation_name == "cpython")
 tqdm==4.67.1 ; python_version >= "3.9" and python_version < "3.14"
-traitlets==5.14.3 ; python_version >= "3.9" and python_version < "3.14"
-types-python-dateutil==2.9.0.20250708 ; python_version >= "3.9" and python_version < "3.14"
-typing-extensions==4.14.1 ; python_version >= "3.9" and python_version < "3.14"
-typing-inspection==0.4.1 ; python_version >= "3.9" and python_version < "3.14"
-uri-template==1.3.0 ; python_version >= "3.9" and python_version < "3.14"
-urllib3==2.5.0 ; python_version >= "3.9" and python_version < "3.14"
-wcwidth==0.2.13 ; python_version >= "3.9" and python_version < "3.14"
-webcolors==24.11.1 ; python_version >= "3.9" and python_version < "3.14"
-webencodings==0.5.1 ; python_version >= "3.9" and python_version < "3.14"
-websocket-client==1.8.0 ; python_version >= "3.9" and python_version < "3.14"
-wrapt==1.17.2 ; python_version >= "3.9" and python_version < "3.14"
-zipp==3.23.0 ; python_version == "3.9"
+typing-extensions==4.15.0 ; python_version >= "3.9" and python_version < "3.14"
+typing-inspection==0.4.2 ; python_version >= "3.9" and python_version < "3.14"
+urllib3==2.6.3 ; python_version >= "3.9" and python_version < "3.14"
+wrapt==2.0.1 ; python_version >= "3.9" and python_version < "3.14"
